# ConanDemo

./: CMakeLists.txt  ConanDemoCPack.cmake  Dockerfile  JumpstartedSkeletonSimplifiedCPack.cmake  README.md  conanfile.py
include/Zemon/: ConanDemo.h  JumpstartedSkeletonSimplified.h
src/: CMakeLists.txt  ConanDemo-cli.cpp  ConanDemo-cli.h  ConanDemo.cpp  JumpstartedSkeletonSimplified-cli.cpp  JumpstartedSkeletonSimplified-cli.h  JumpstartedSkeletonSimplified.cpp  main.cpp
test_package/: CMakeLists.txt  ConanDemoTestConan.cpp  JumpstartedSkeletonSimplifiedTestConan.cpp  conanfile.py
tests/: CMakeLists.txt  ConanDemo-cliTest.cpp  ConanDemoTest.cpp  JumpstartedSkeletonSimplified-cliTest.cpp  JumpstartedSkeletonSimplifiedTest.cpp
